<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".assignment02.SharedPreferences">

    <EditText
        android:id="@+id/TextEditerForName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <EditText
        android:id="@+id/textEditerForNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <TextView
        android:id="@+id/Search_ID"
        android:layout_width="215dp"
        android:layout_height="21dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/shared_proferance_demo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TextEditerForName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />

    <CheckBox
        android:id="@+id/WhatsApp"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:checked="false"
        android:text="@string/i_have_whatsapp_in_this_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEditerForNumber"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/Save"
        android:layout_width="96dp"
        android:layout_height="49dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhatsApp"
        app:layout_constraintVertical_bias="0.022" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/DataLayout"
        android:layout_width="346dp"
        android:layout_height="198dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="114dp"
            android:layout_height="28dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/saved_data"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.094" />

        <TextView
            android:id="@+id/NAmeGet"
            android:layout_width="252dp"
            android:layout_height="19dp"
            android:text="Name :"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.382"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.266" />

        <TextView
            android:id="@+id/PhoneGet"
            android:layout_width="174dp"
            android:layout_height="20dp"
            android:text="Number: "
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.453" />

        <TextView
            android:id="@+id/IhaveWA"
            android:layout_width="195dp"
            android:layout_height="19dp"
            android:text="Have Whatsapp : "
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.629" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/NOdataLayout2"
        android:layout_width="346dp"
        android:layout_height="198dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="114dp"
            android:layout_height="28dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/no_data_saved"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.094" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/Return"
        android:layout_width="261dp"
        android:layout_height="44dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:layout_marginBottom="14dp"
        android:text="@string/return_saved_data"
        app:layout_constraintBottom_toTopOf="@+id/DataLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Save"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonBAck"
        android:layout_width="151dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:text="Back to Main Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DataLayout"
        app:layout_constraintVertical_bias="0.55" />

    <Button
        android:id="@+id/button_Clear"
        android:layout_width="151dp"
        android:layout_height="59dp"
        android:text="Clear Saved data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toEndOf="@+id/buttonBAck"
        app:layout_constraintTop_toBottomOf="@+id/DataLayout"
        app:layout_constraintVertical_bias="0.55" />


</androidx.constraintlayout.widget.ConstraintLayout>

